--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,11 +1,1 @@
-//Utils
-@import 'helpers/variables';
-@import 'helpers/placeholders';
-@import 'helpers/mixins';
-@import 'helpers/smart-grid';
-//Base styles
-@import 'normalize';
-@import 'fonts';
-@import 'base';
-//Components
-//@import 'components/'
+@import "fonts";
