--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,1 +1,18 @@
 @import "fonts";
+@import "helpers/smart-grid";
+
+:root {
+  --kaushan-font: "Kaushan Script", cursive;
+  --montserrat-font: "Montserrat", sans-serif;
+}
+
+body{
+  font-size: 14px;
+  line-height: 1.2;
+}
+
+.company{
+
+}
+
+
