--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -1,15 +1,3 @@
-<<<<<<< HEAD
-$main-color: #93989d;
-$secondary-color: #ec6161;
-$background-color: #3a3e64;
-$white-color: #ffffff;
-$name-color: #2d3033;
-$social-color: #c6cacc;
-$secondary-font: "Roboto", sans-serif;
-$kaushan-font: "Kaushan Script", cursive;
-$main-font: "Raleway", sans-serif;
-=======
-$main-font-stack: 'Open Sans', sans-serif;
-$second-font-stack: 'Ubuntu';
-$main-accent-color: ;
->>>>>>> origin/header
+$main-font-stack: "Open Sans", sans-serif;
+$second-font-stack: "Ubuntu";
+$main-accent-color: #fcae26;
