--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -16,7 +16,7 @@
 }
 
 @font-face {
-  font-family: 'Raleway';
+  font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
   src: url('../fonts/open-sans-v17-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
