--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -1,4 +1,3 @@
-
 html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -12,7 +11,7 @@ html {
 }
 
 body {
-  font-family:$main-font;
+  font-family: $main-font-stack;
   color: $main-color;
   line-height: 1.2;
   font-size: 14px;
@@ -51,7 +50,7 @@ input[type="”radio”"].visually-hidden {
   clip: rect(0, 0, 0, 0);
   overflow: hidden;
 }
-=======
+
 html {
   box-sizing: border-box;
 }
