--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -1,4 +1,4 @@
-
-$main-font-stack: "Open Sans", sans-serif;
-$second-font-stack: "Ubuntu";
+$main-font-stack: "Ubuntu";
+$second-font-stack: "Open Sans", sans-serif;
 $main-accent-color: #fcae26;
+$main-color: #000;
