--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -30,3 +30,9 @@
   src: url('../fonts/open-sans-v17-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
   url('../fonts/open-sans-v17-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
+@font-face {
+  font-family: 'Proxima Nova';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/ProximaNovaBold.otf') format('otf');} /* Chrome 26+, Opera 23+, Firefox 39+ */
+  
