--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -1,4 +1,5 @@
 $main-font-stack: "Ubuntu";
 $second-font-stack: "Open Sans", sans-serif;
+$proxima-font: "Proxima Nova", sans-serif;
 $main-accent-color: #fcae26;
 $main-color: #000;
