--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -45,12 +45,25 @@ section {
   font-family: $proxima-font;
   color: $main-accent-color;
   font-size: 60px;
+  line-height: 40px;
 }
 
-.company__image img {
+.company__image  {
+  margin-top: 20px;
+  width: 280px;
   height: 320px;
+  border-radius: 10px;
+  background-image: url(../images/kids.jpg);
+  background-size: cover;
 }
 
-.company__description{
+.company__description p{
   font-family: $main-font-stack;
+  color: #464646;
+  font-size: 14px;
 }
+
+.company__description p:last-child{
+  margin-top: 10px;
+}
+
