--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -51,16 +51,15 @@ h1 {
   font-size: 16px;
 }
 
-section {
-}
 
+//SECTION company
 .company {
   margin-top: 20px;
   display: flex;
-  flex-direction: column-reverse;
+  flex-wrap: wrap;
 }
 
-.company::after {
+.company::before {
   content: '\201C';
   display: block;
   font-family: $proxima-font;
@@ -90,13 +89,32 @@ section {
   margin-top: 10px;
 }
 
-.company__description{
+.company_description{
   background-color: #7550de;
+  display: block;
+  max-width: 100%;
+  height: 230px;
+  margin-top: 42px;
+  text-align: center;
 }
 
-.company__description p{
-
+.company_description p{
+  font-family: $main-font-stack;
+  font-size: 18px;
+  line-height: 24px;
+  color: #fff;
+  
 }
+
+.company_description p:before{
+  content:"";
+  display: block;
+  width: 60px;
+  height: 2px;
+  background-color: $main-accent-color;
+  margin: 0 auto;
+}
+
 
 
 
