--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -85,7 +85,7 @@ h1 {
   letter-spacing: 1px;
 }
 
-.company_text p:last-child{
+.company__text p:last-child{
   margin-top: 10px;
 }
 
@@ -93,9 +93,9 @@ h1 {
   background-color: #7550de;
   display: block;
   max-width: 100%;
-  height: 230px;
+  height: 232px;
   margin-top: 42px;
-  text-align: center;
+  border-radius: 10px;
 }
 
 .company_description p{
@@ -103,16 +103,18 @@ h1 {
   font-size: 18px;
   line-height: 24px;
   color: #fff;
-  
+  margin-top: 20px;
+  padding: 0 15px 0 19px;
+  text-align: center;
 }
 
 .company_description p:before{
   content:"";
-  display: block;
+  display: flex;
   width: 60px;
   height: 2px;
   background-color: $main-accent-color;
-  margin: 0 auto;
+  margin: 30px auto;
 }
 
 
