--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -22,7 +22,9 @@
 
 .site-navigation {
   display: flex;
+  font-family: $second-font-stack;
   justify-content: space-between;
+  padding-top: 10px;
 }
 
 .site-navigation__list {
@@ -35,7 +37,7 @@
 }
 
 .banner-title {
-  font-family: 'OpenSans';
+  font-family: $second-font-stack;
   color: #ffffff;
   text-align: center;
   margin: 0;
@@ -43,12 +45,27 @@
   margin-top: 275px;
 }
 
-h1 {
+.title {
   font-size: 35px;
 }
 
 .banner-info {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 281px;
+  height: 55px;
+  background-color: rgba(22, 24, 32, 0.68);
   font-size: 16px;
+  padding-top: 10px;
+}
+
+.banner-info a {
+  font-family: $main-font-stack;
+  font-size: 800;
+  text-decoration: none;
+  color: #d49e37;
+  cursor: pointer;
 }
 
 section {
