--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -27,6 +27,31 @@
   padding-top: 10px;
 }
 
+.checkbox {
+  position: absolute;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+  right: 0;
+  transform: translateX(-20px);
+  border: none;
+  width: 29px;
+  height: 20px;
+}
+
+.checkbox__menu {
+  width: 29px;
+  height: 4px;
+  background-color: #fff;
+}
+
+.checkbox__menu:not(:last-child) {
+  margin-bottom: 4px;
+}
+
 .site-navigation__list {
   display: none;
   list-style: none;
@@ -37,6 +62,7 @@
 }
 
 .banner-title {
+  position: relative;
   font-family: $second-font-stack;
   color: #ffffff;
   text-align: center;
@@ -62,10 +88,20 @@
 
 .banner-info a {
   font-family: $main-font-stack;
-  font-size: 800;
+  font-weight: 700;
   text-decoration: none;
   color: #d49e37;
   cursor: pointer;
+}
+
+.scroll {
+  position: absolute;
+  transform: rotate(90deg);
+  left: 50%;
+  transform: translateX(-50%);
+  color: #ffffff;
+  font-size: 36px;
+  bottom: 50px;
 }
 
 //SECTION company
