add services section

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -4,7 +4,7 @@
 @import 'helpers/mixins.scss';
 @import './normalize';
 @import './base';
-
+//TODO: double quotes, base fz
 .container {
   max-width: 1234px;
   padding: 0 20px;
@@ -116,14 +116,12 @@ h1 {
   background-color: $main-accent-color;
   margin: 30px auto;
 }
-
+//section
 .section__title{
   margin-top: 60px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
 }
-
-
 
 .section__title-icon{
   content: '';
@@ -141,7 +139,7 @@ h1 {
   font-family: $second-font-stack;
   text-transform: uppercase;
   font-size: 20px;
-  margin-left: 5px;
+  margin-left: 10px;
 }
 
 //fields section
@@ -203,3 +201,67 @@ h1 {
     color: #fff;
   }
 }
+//section services
+
+.services__list{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.services__logo {
+  margin-top: 30px;
+  
+  &::before {
+    display: block;
+    content: '';
+    width: 50px;
+    height: 50px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50%;
+  }
+  
+  &-globe::before{
+    background-color: rgba(251, 238, 215, 0.7);
+  }
+  
+  &-hands::before{
+    background-color: rgba(248, 224, 215, 0.7);
+  }
+  &-hi::before{
+    background-color: rgba(227, 220, 248, 0.7);
+  }
+  &-money::before{
+    background-color: rgba(223, 238, 236, 0.7);
+  }
+  &-hands::before{
+    background-color: rgba(248, 224, 215, 0.7);
+  }
+  &-pencil::before{
+    background-color: rgba(227, 220, 248, 0.7);
+  }
+  &-file::before{
+    background-color: rgba(248, 224, 215, 0.7);
+  }
+  &-aim::before{
+    background-color: rgba(251, 238, 215, 0.7);
+  }
+}
+
+$icons: globe, hands, hi, money, pencil, file, aim;
+
+@include generate-pseudo-icons('services__logo-', $icons, '../images/services/services-', png);
+.services__item{
+  border-radius: 10px;
+  flex-basis: 300px;
+  padding: 0px 23px 0px 46px;
+}
+.services__description{
+  margin-top: 16px;
+  font-family: $main-font-stack;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #464646;
+}
+
