--- a/src/sass/helpers/mixins.scss
+++ b/src/sass/helpers/mixins.scss
@@ -92,7 +92,7 @@
       background-image: url(#{$path}#{$icon}.#{$ext});
 
       @media (min-resolution: 192dpi), (min-resolution: 2dppx) {
-        background-image: url(#{$path}#{$icon}@2px.#{$ext});
+        background-image: url(#{$path}#{$icon}@2x.#{$ext});
       }
     }
   }
