--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -1,4 +1,4 @@
-$main-font-stack: 'Ubuntu', sans-serif;
+$main-font-stack: Ubuntu, sans-serif;
 $second-font-stack: 'Open Sans', sans-serif;
 $proxima-font: "Proxima Nova", sans-serif;
 $main-accent-color: #fcae26;
