--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -54,68 +54,72 @@ h1 {
 
 //SECTION company
 .company {
-  margin-top: 20px;
+  margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
+  position: relative;
+  
+  &::before {
+    content: '\201C';
+    display: block;
+    font-family: 'Proxima Nova', sans-serif;
+    color: $main-accent-color;
+    font-size: 60px;
+    line-height: 1.2;
+    position: absolute;
+    top: -40px;
+  }
+  
+  //&__image {
+  //  margin-top: 20px;
+  //  width: 280px;
+  //  height: 320px;
+  //  border-radius: 10px;
+  //  background-image: url(../images/kids.jpg);
+  //  background-size: cover;
+  //}
+  
+  &__text p {
+    font-family: $main-font-stack;
+    color: #464646;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 1px;
+  }
+  
+  &__text p:last-child{
+    margin-top: 10px;
+  }
 }
 
-.company::before {
-  content: '\201C';
-  display: block;
-  font-family: $proxima-font;
-  color: $main-accent-color;
-  font-size: 60px;
-  line-height: 40px;
-}
-
-.company__image {
-  margin-top: 20px;
-  width: 280px;
-  height: 320px;
-  border-radius: 10px;
-  background-image: url(../images/kids.jpg);
-  background-size: cover;
-}
-
-.company__text p {
-  font-family: $main-font-stack;
-  color: #464646;
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: 1px;
-}
-
-.company__text p:last-child{
-  margin-top: 10px;
-}
-
-.company_description{
+//goit section
+.goit_description{
   background-color: #7550de;
   display: block;
   max-width: 100%;
   height: 232px;
   margin-top: 42px;
   border-radius: 10px;
+  border: 1px solid transparent;
+  & p{
+    font-family: $main-font-stack;
+    font-size: 18px;
+    line-height: 24px;
+    color: #fff;
+    padding: 0 15px 0 19px;
+    text-align: center;
+  }
+  & p:before{
+    content:"";
+    display: flex;
+    width: 60px;
+    height: 2px;
+    background-color: $main-accent-color;
+    margin: 20px auto;
+  }
 }
 
-.company_description p{
-  font-family: $main-font-stack;
-  font-size: 18px;
-  line-height: 24px;
-  color: #fff;
-  margin-top: 20px;
-  padding: 0 15px 0 19px;
-  text-align: center;
-}
 
-.company_description p:before{
-  content:"";
-  display: flex;
-  width: 60px;
-  height: 2px;
-  background-color: $main-accent-color;
-  margin: 30px auto;
-}
 //section
 .section__title{
   margin-top: 60px;
@@ -143,7 +147,7 @@ h1 {
 }
 
 //fields section
-.fields__list{
+.fields{
   margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
@@ -203,7 +207,7 @@ h1 {
 }
 //section services
 
-.services__list{
+.services{
   display: flex;
   flex-wrap: wrap;
 }
@@ -219,6 +223,7 @@ h1 {
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 50%;
+    background-size: 30px;
   }
   
   &-globe::before{
