--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -4,7 +4,7 @@
 @import 'helpers/mixins.scss';
 @import './normalize';
 @import './base';
-//TODO: double quotes, base fz
+//TODO: double quotes, base fz, box shadow, hover filter
 .container {
   max-width: 1234px;
   padding: 0 20px;
