split styles to components

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -11,506 +11,6 @@
   margin: 0 auto;
 }
 
-.banner {
-  display: block;
-  position: relative;
-  width: 100%;
-  min-height: 560px;
-  background-image: url(../images/hbackground-mobile.jpg);
-  background-size: cover;
-}
-
-.banner-menu {
-  display: flex;
-  position: relative;
-  font-family: $second-font-stack;
-  justify-content: space-between;
-  padding-top: 10px;
-}
-
-.burger-menu {
-  display: flex;
-  position: relative;
-  font-family: $second-font-stack;
-  justify-content: space-between;
-  padding-top: 10px;
-}
-
-.burger {
-  position: absolute;
-  background-color: transparent;
-  margin: 0;
-  padding: 0;
-  right: 0;
-  transform: translateX(-20px);
-  border: none;
-  width: 29px;
-  height: 20px;
-}
-
-.burger__menu {
-  width: 29px;
-  height: 4px;
-  background-color: #fff;
-}
-
-.burger__menu:not(:last-child) {
-  margin-bottom: 4px;
-}
-
-.site-navigation {
-  display: none;
-}
-
-.site-navigation__list {
-  // display: none;
-  display: block;
-  width: 200px;
-  left: 50%;
-  transform: translateX(-50%);
-  list-style: none;
-  position: absolute;
-  text-align: center;
-}
-
-.site-navigation__item {
-  text-decoration: none;
-  font-family: $main-font-stack;
-  font-weight: 900;
-  font-size: 25px;
-  line-height: 60px;
-  color: #ffffff;
-}
-
-.header-button {
-  width: 192px;
-  height: 43px;
-  font-size: 16px;
-  font-family: $second-font-stack;
-  color: #f6f9fa;
-  font-weight: 800;
-  border: none;
-  border-radius: 5px;
-  background-color: #e9ac38;
-}
-
-.banner-title {
-  position: relative;
-  font-family: $second-font-stack;
-  color: #ffffff;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  margin-top: 275px;
-}
-
-.title {
-  font-size: 35px;
-}
-
-.banner-info {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 281px;
-  height: 55px;
-  background-color: rgba(22, 24, 32, 0.68);
-  font-size: 16px;
-  padding-top: 10px;
-}
-
-.banner-info a {
-  font-family: $main-font-stack;
-  font-weight: 700;
-  text-decoration: none;
-  color: #d49e37;
-  cursor: pointer;
-}
-
-.scroll {
-  position: absolute;
-  transform: rotate(90deg);
-  left: 50%;
-  transform: translateX(-50%);
-  color: #ffffff;
-  font-size: 36px;
-  bottom: 50px;
-}
-
-//SECTION company
-.company {
-  margin-top: 40px;
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
-
-  &::before {
-    content: '\201C';
-    display: block;
-    font-family: 'Proxima Nova', sans-serif;
-    color: $main-accent-color;
-    font-size: 60px;
-    line-height: 1.2;
-    position: absolute;
-    top: -40px;
-  }
-
-  //&__image {
-  //  margin-top: 20px;
-  //  width: 280px;
-  //  height: 320px;
-  //  border-radius: 10px;
-  //  background-image: url(../images/kids.jpg);
-  //  background-size: cover;
-  //}
-
-  &__text p {
-    font-family: $main-font-stack;
-    color: #464646;
-    font-size: 14px;
-    font-weight: 400;
-    letter-spacing: 1px;
-  }
-
-  &__text p:last-child {
-    margin-top: 10px;
-  }
-}
-
-//goit section
-.goit_description {
-  background-color: #7550de;
-  display: block;
-  max-width: 100%;
-  height: 232px;
-  margin-top: 42px;
-  border-radius: 10px;
-  border: 1px solid transparent;
-  & p {
-    font-family: $main-font-stack;
-    font-size: 18px;
-    line-height: 24px;
-    color: #fff;
-    padding: 0 15px 0 19px;
-    text-align: center;
-  }
-  & p:before {
-    content: '';
-    display: flex;
-    width: 60px;
-    height: 2px;
-    background-color: $main-accent-color;
-    margin: 20px auto;
-  }
-}
-
-//section
-.section__title {
-  margin-top: 60px;
-  display: flex;
-  justify-content: flex-start;
-}
-
-.section__title-icon {
-  content: '';
-  display: block;
-  width: 25px;
-  height: 25px;
-  background-color: $main-accent-color;
-  background-image: url('../images/icon-fields.png');
-  background-position: center;
-  background-repeat: no-repeat;
-  border-radius: 50%;
-}
-
-.section__title-text {
-  font-family: $second-font-stack;
-  text-transform: uppercase;
-  font-size: 20px;
-  margin-left: 10px;
-}
-
-//fields section
-.fields {
-  margin-top: 40px;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.fields__item {
-  border-radius: 10px;
-  padding-left: 46px;
-  padding-bottom: 23px;
-}
-
-.fields__item-title {
-  margin-top: 26px;
-  font-family: $main-font-stack;
-  font-weight: 700;
-  font-size: 25px;
-  color: #272727;
-}
-
-.fields__item-description {
-  margin-top: 30px;
-  font-family: $main-font-stack;
-  font-weight: 400;
-  font-size: 16px;
-  color: #272727;
-}
-
-.fields__item-price {
-  margin-top: 40px;
-  font-family: $second-font-stack;
-  font-weight: 700;
-  font-size: 30px;
-  color: $main-accent-color;
-  position: relative;
-}
-.fields__item-price::after {
-  content: 'років';
-  font-size: 13px;
-  position: absolute;
-  top: -10px;
-  text-decoration: underline;
-}
-
-.fields__item-arrow {
-  font-family: Arial, sans-serif;
-  font-size: 24px;
-  color: $main-accent-color;
-}
-
-.fields__item:hover {
-  background-color: $main-accent-color;
-
-  .fields__item-description,
-  .fields__item-price,
-  .fields__item-arrow {
-    color: #fff;
-  }
-}
-
-//section services
-
-.services {
-  display: flex;
-  flex-wrap: wrap;
-
-  &__item {
-    border-radius: 10px;
-    flex-basis: 280px;
-    padding: 0px 23px 0px 46px;
-  }
-
-  &__description {
-    margin-top: 16px;
-    font-family: $main-font-stack;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    color: #464646;
-  }
-}
-
-.services__logo {
-  margin-top: 30px;
-
-  &::before {
-    display: block;
-    content: '';
-    width: 50px;
-    height: 50px;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 50%;
-    background-size: 30px;
-  }
-
-  &-globe::before {
-    background-color: rgba(251, 238, 215, 0.7);
-  }
-
-  &-hands::before {
-    background-color: rgba(248, 224, 215, 0.7);
-  }
-  &-hi::before {
-    background-color: rgba(227, 220, 248, 0.7);
-  }
-  &-money::before {
-    background-color: rgba(223, 238, 236, 0.7);
-  }
-  &-hands::before {
-    background-color: rgba(248, 224, 215, 0.7);
-  }
-  &-pencil::before {
-    background-color: rgba(227, 220, 248, 0.7);
-  }
-  &-file::before {
-    background-color: rgba(248, 224, 215, 0.7);
-  }
-  &-aim::before {
-    background-color: rgba(251, 238, 215, 0.7);
-  }
-}
-
-$icons: globe, hands, hi, money, pencil, file, aim;
-
-@include generate-pseudo-icons(
-  'services__logo-',
-  $icons,
-  '../images/services/services-',
-  png
-);
-
-//structure section
-
-.structure {
-  display: flex;
-  flex-wrap: wrap;
-  padding-bottom: 60px;
-
-  &__item {
-    flex-basis: 280px;
-    margin-top: 20px;
-    padding: 20px;
-    height: 258px;
-    border-top-right-radius: 30px;
-    border-bottom-left-radius: 30px;
-    box-shadow: 3px 5.196px 18px 0px rgba(0, 0, 0, 0.1);
-  }
-
-  &__item:hover {
-    filter: brightness(105%);
-  }
-
-  &__title {
-    font-family: $main-font-stack;
-    font-weight: 700;
-    font-size: 25px;
-  }
-
-  &__description {
-    font-family: $main-font-stack;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 22px;
-    color: #464646;
-    margin-top: 20px;
-  }
-
-  &__item-tech {
-    background-color: #f6ead0;
-  }
-
-  &__item-soft {
-    background-color: #fbdcd2;
-  }
-
-  &__item-it {
-    background-color: #e2d8f5;
-  }
-
-  &__item-hack {
-    background-color: #c8eae8;
-  }
-}
-
-.structure__item-dash {
-  border: 1px dashed #fff;
-  border-top-right-radius: 30px;
-  border-bottom-left-radius: 30px;
-  padding: 20px;
-  height: 227px;
-}
-
-// FOOTER ==============
-.page-footer {
-  display: flex;
-  position: relative;
-  min-height: 470px;
-  background-color: #222222;
-  margin-top: 59px;
-}
-
-.contacts {
-  padding-left: 64px;
-  padding-top: 42px;
-  font-family: $main-font-stack;
-  font-size: 14px;
-  line-height: 25px;
-  color: #9699a6;
-}
-
-.page-adress {
-  margin-top: 15px;
-  margin-bottom: 34px;
-}
-
-.contacts-list a {
-  font-size: 14px;
-  line-height: 25px;
-  color: #9699a6;
-  font-family: $main-font-stack;
-  text-decoration: none;
-}
-
-.footer-button {
-  width: 192px;
-  height: 43px;
-  font-size: 16px;
-  font-family: $second-font-stack;
-  color: #f6f9fa;
-  font-weight: 800;
-  border: none;
-  border-radius: 5px;
-  background-color: #e9ac38;
-  margin-top: 34px;
-  margin-bottom: 33px;
-}
-
-.socials-links__icon {
-  width: 37px;
-  height: 37px;
-  padding: 0;
-  border: none;
-  border-radius: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  scroll-margin-bottom: 34px;
-}
-
-.socials-links__icon:not(:last-child) {
-  margin-right: 17px;
-}
-
-.socials-links__icon--telegram {
-  background-image: url(../images/telegram.png);
-  background-color: #6398e0;
-}
-
-.socials-links__icon--facebook {
-  background-image: url(../images/Facebook.png);
-  background-color: #3b4e70;
-}
-
-.socials-links__icon--youtube {
-  background-image: url(../images/Youtube.png);
-  background-color: #9f2431;
-}
-
-.footer-under {
-  min-height: 100px;
-  background-color: #151515;
-  bottom: 0;
-}
-
-.footer-under__info {
-  margin-left: 44px;
-  width: 236px;
-  padding-top: 10px;
-  font-size: 12px;
-  line-height: 25px;
-  font-family: $second-font-stack;
-  color: #626263;
-}
+@import 'components/header';
+@import 'components/main';
+@import 'components/footer';
