--- a/src/sass/components/main.scss
+++ b/src/sass/components/main.scss
@@ -105,6 +105,7 @@
   padding-right: 20px;
   padding-bottom: 23px;
   flex: 0 0 256px;
+  transition: background-color 0.3s linear;
 }
 
 .fields__item-title {
@@ -249,6 +250,7 @@ $icons: globe, hands, hi, money, pencil, file, aim;
     border-top-right-radius: 30px;
     border-bottom-left-radius: 30px;
     box-shadow: 3px 5.196px 18px 0px rgba(0, 0, 0, 0.1);
+    transition: filter 0.2s linear;
   }
 
   &__item:hover {
@@ -337,6 +339,7 @@ $icons: globe, hands, hi, money, pencil, file, aim;
   }
 
   .fields {
+    justify-content: space-around;
     &__item {
       padding-left: 27px;
       flex: 0 0 307px;
@@ -396,6 +399,8 @@ $icons: globe, hands, hi, money, pencil, file, aim;
   }
 
   .goit_description {
+    padding: 60px;
+
     & p {
       font-size: 25px;
     }
