--- a/src/sass/components/main.scss
+++ b/src/sass/components/main.scss
@@ -250,7 +250,6 @@ $icons: globe, hands, hi, money, pencil, file, aim;
     border-top-right-radius: 30px;
     border-bottom-left-radius: 30px;
     box-shadow: 3px 5.196px 18px 0px rgba(0, 0, 0, 0.1);
-    transition: filter 0.2s linear;
   }
 
   &__item:hover {
@@ -342,7 +341,8 @@ $icons: globe, hands, hi, money, pencil, file, aim;
     justify-content: space-around;
     &__item {
       padding-left: 27px;
-      flex: 0 0 307px;
+      flex-grow: 1;
+      // flex: 0 0 307px;
     }
 
     &__item-title {
