--- a/src/sass/components/main.scss
+++ b/src/sass/components/main.scss
@@ -342,6 +342,7 @@ $icons: globe, hands, hi, money, pencil, file, aim;
 
     &__item {
       padding-left: 27px;
+      padding-right: 33px;
       flex-grow: 1;
       // flex: 0 0 307px;
     }
