--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -10,7 +10,7 @@
   padding: 0 7%;
   margin: 0 auto;
 }
-
+@import 'components/modal.scss';
 @import 'components/header';
 @import 'components/main';
 @import 'components/footer';
